# vipa

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  res.json
.github/workflows/: docs.yml  test.yml
benchmarks/: CMakeLists.txt  benchmark_ipv4.cxx  benchmark_ipv6.cxx  benchmark_parser.cxx
cmake/: VIPAConfig.cmake.in
docs/: Doxyfile.in  README.md  coding-rules.md  harness.md
tests/: CMakeLists.txt  test_ipv4.cxx  test_ipv6.cxx  test_parser.cxx
vipa/: address.hxx  ipv4.hxx  ipv6.hxx  parser.hxx  vipa.hxx
vipa/detail/: classify.hxx  simd.hxx
